cmake_minimum_required(VERSION 3.17)
project(Proyecto__1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Proyecto__1 main.cpp Producto.cpp Producto.h Articulo.cpp Articulo.h Servicio.cpp Servicio.h Administrador.cpp Administrador.h Vendedor.cpp Vendedor.h Inventario.cpp Inventario.h Caja.cpp Caja.h MenuPrincipal.cpp MenuPrincipal.h MenuAdministrador.cpp MenuAdministrador.h MenuVenta.cpp MenuVenta.h Fecha.cpp Fecha.h NodoArticulo.cpp NodoArticulo.h ListaArticulo.cpp ListaArticulo.h)